# learning-managenet-system

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README  README.md  create-multiple-postgresql-databases.sh  create_lms_base_image.sh  create_lms_base_images.sh  docker-compose.yml  help.txt  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  test.py
accounts/: admin.py  app_settings.py  apps.py  backends.py  forms.py  middleware.py  models.py  signals.py  tests.py  utils.py  validators.py
accounts/api/: permissions.py  serializers.py  urls.py  views.py
accounts/apis/: permissions.py  serializers.py  urls.py  views.py
accounts/authtoken/: admin.py  app_settings.py  apps.py  auth.py  crypto.py  models.py  serializers.py  settings.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_managers.py
api/: urls.py  views.py
apis/: urls.py  views.py
app/: manage.py
app/accounts/: admin.py  backends.py  (+3 more)
assignments/: admin.py  models.py
courses/: admin.py  apps.py  models.py  permissions.py  signals.py
django_config/: asgi.py  settings.py  urls.py  wsgi.py
docker/: .dockerignore  account.Dockerfile  auth.Dockerfile  base.Dockerfile
exams/: admin.py  models.py
frontend/: .gitignore  frontend.Dockerfile  package-lock.json  run.sh  vite.config.ts
nginx/: nginx.Dockerfile  nginx.conf
scripts/: startup.py
services/account/: pyproject.toml
services/account/accounts/: app_settings.py  middleware.py  models.py  utils.py  validators.py
services/account/accounts/apis/: urls.py
services/account/accounts/apis/signup/: schema.py  view.py
services/account/accounts/authtoken/: models.py  utils.py
services/account/accounts/authtoken/migrations/: 0001_initial.py
services/account/accounts/migrations/: 0001_initial.py
services/account/accounts/templates/accounts/email/: email_activationsV1.html  email_activations_complated.html
services/account/accounts/templates/accounts/password/: password_reset.html
services/account/django_core/: asgi.py  settings.py  uvicorn_worker.py  wsgi.py
services/account/permissions/: apps.py  models.py
services/account/rest_api/: api_view.py  exceptions.py  helpers.py
services/account/utils/: hasher.py  transaction.py  validate.py
services/auth/: .pg_service.conf  main.py  manage.py  pyproject.toml
services/auth/accounts/: admin.py  apps.py  forms.py  mail.py  middleware.py  models.py  signals.py  tests.py  urls.py  utils.py  validators.py
services/auth/accounts/apis/: permissions.py  serializers.py  urls.py  views.py
services/auth/accounts/authtoken/: __init__.py  admin.py  app_settings.py  auth.py  crypto.py  serializers.py
services/auth/accounts/authtoken/migrations/: 0001_initial.py
services/auth/accounts/migrations/: 0001_initial.py
services/auth/accounts/templates/accounts/password/: password_reset_complated.html
services/auth/core/db/mixins/: timestamp.py
services/auth/django_core/: settings.py  urls.py
students/: admin.py  apps.py  models.py  signals.py  tests.py
teachers/: admin.py  apps.py  models.py  signals.py
trs/: __init__.py  admin.py  apps.py  models.py  signals.py
(+189 files in other folders)
