[tool.poetry]
name = "s"
version = "0.1.0"
description = ""
authors = ["a.espahbodi <dev.amir.espahbodi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
django-cors-headers = "^4.3.1"
django-extensions = "^3.2.3"
django-ipware = "^7.0.1"
django-jalali-date = "^1.1.0"
django-jalali = "^6.2.1"
django-phonenumber-field = "^7.3.0"
django-templated-mail = "^1.1.1"
djangorestframework = "^3.15.1"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
environs = {extras = ["django"], version = "^11.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
